# marketplace-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_auth_tables.py  ef0734d67108_add_audit_logs.py
app/: main.py
app/api/: deps.py
app/api/v1/admin/: auth.py  offers.py  products.py  sellers.py
app/api/v1/public/: products.py  sellers.py
app/application/: uow.py
app/application/dto/: offer_dto.py  product_dto.py
app/application/services/: auth_service.py  offer_service.py  product_service.py
app/domain/entities/: admin.py  offer.py  product.py  seller.py
app/domain/value_objects/: money.py
app/infrastructure/auth/: jwt.py  password.py
app/infrastructure/config/: settings.py
app/infrastructure/db/: models.py  session.py  uow.py
app/infrastructure/storage/: minio_client.py
app/persistence/mappers/: product_mapper.py
app/persistence/repositories/: admin_repo.py  audit_repo.py  offer_repo.py  product_repo.py  seller_repo.py
app/seed/: create_admin.py  seed_data.py
app/tests/: test_public_products_search_pagination.py  test_smoke.py
docs/ai/: AI_WORKFLOW.md  PROMPTS.md
docs/ai/decisions/: 001-architecture.md  002-pagination.md  003-storage.md
docs/ai/sessions/: 01_initial_architecture_setup.md  02_database_schema_and_minio.md  03_openapi_contract_audit.md  04_database_schema_refactoring.md  05_seller_admin_auth.md
